--- a/css/final-style.css
+++ b/css/final-style.css
@@ -1,415 +1,184 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=utf-8">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Aptos;
-	panose-1:2 11 0 4 2 2 2 2 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:8.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:12.0pt;
-	font-family:"Aptos",sans-serif;}
-.MsoChpDefault
-	{font-family:"Aptos",sans-serif;}
-.MsoPapDefault
-	{margin-bottom:8.0pt;
-	line-height:115%;}
-@page WordSection1
-	{size:8.5in 11.0in;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US style='word-wrap:break-word'>
-
-<div class=WordSection1>
-
-<p class=MsoNormal>.skip-link {</p>
-
-<p class=MsoNormal>  position: absolute;</p>
-
-<p class=MsoNormal>  top: -3em;</p>
-
-<p class=MsoNormal>  background: #fff;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.skip-link:focus{</p>
-
-<p class=MsoNormal>  top: 0;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>body{</p>
-
-<p class=MsoNormal>background-color: #f25771; </p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>main {</p>
-
-<p class=MsoNormal>  width: 90%;</p>
-
-<p class=MsoNormal>  max-width: 1000px;</p>
-
-<p class=MsoNormal>  background: #FFF;</p>
-
-<p class=MsoNormal>  border-radius: 1rem;</p>
-
-<p class=MsoNormal>  padding: 1rem 2rem;</p>
-
-<p class=MsoNormal>  box-sizing: border-box;</p>
-
-<p class=MsoNormal>  margin: 1rem auto;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>nav {</p>
-
-<p class=MsoNormal>  color: #FFF;</p>
-
-<p class=MsoNormal>  background-color: #000000;</p>
-
-<p class=MsoNormal>  padding: 5px;</p>
-
-<p class=MsoNormal>  display: block;</p>
-
-<p class=MsoNormal>  margin: 0;</p>
-
-<p class=MsoNormal>  border-bottom: 3px solid #FFF;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>nav a {</p>
-
-<p class=MsoNormal>  color: #FFF;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>nav li, nav li a {</p>
-
-<p class=MsoNormal>  width: 100%;</p>
-
-<p class=MsoNormal>  text-align: center;</p>
-
-<p class=MsoNormal>  display: flex;</p>
-
-<p class=MsoNormal>  justify-content: center;</p>
-
-<p class=MsoNormal>  align-items: center;</p>
-
-<p class=MsoNormal>  font-size: 1.2rem;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>nav ul {</p>
-
-<p class=MsoNormal>    display: flex;</p>
-
-<p class=MsoNormal>    flex-direction: row;</p>
-
-<p class=MsoNormal>    flex-wrap: wrap;</p>
-
-<p class=MsoNormal>    justify-content: center;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>  nav li {</p>
-
-<p class=MsoNormal>    width: 20%;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>h1{</p>
-
-<p class=MsoNormal>  font-family: &quot;Playfair Display&quot;, serif;</p>
-
-<p class=MsoNormal>  font-optical-sizing: auto;</p>
-
-<p class=MsoNormal>  font-weight: &lt;weight&gt;;</p>
-
-<p class=MsoNormal>  font-style: normal;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>h2{</p>
-
-<p class=MsoNormal> font-family: &quot;Roboto&quot;, sans-serif;</p>
-
-<p class=MsoNormal>  font-weight: 400;</p>
-
-<p class=MsoNormal>  font-style: normal;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>h3{</p>
-
-<p class=MsoNormal> font-family: &quot;Roboto&quot;, sans-serif;</p>
-
-<p class=MsoNormal>  font-weight: 400;</p>
-
-<p class=MsoNormal>  font-style: normal;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>p{</p>
-
-<p class=MsoNormal>font-family: &quot;Roboto Slab&quot;, serif;</p>
-
-<p class=MsoNormal>  font-optical-sizing: auto;</p>
-
-<p class=MsoNormal>  font-weight: &lt;weight&gt;;</p>
-
-<p class=MsoNormal>  font-style: normal;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>ul {</p>
-
-<p class=MsoNormal>  list-style-type: none;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>/*Photo gallery css for gallery-test*/</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.gallery-example {</p>
-
-<p class=MsoNormal>                  display: flex;</p>
-
-<p class=MsoNormal>                  flex-direction: column;</p>
-
-<p class=MsoNormal>                  justify-content: space-between;</p>
-
-<p class=MsoNormal>                  align-items: center;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.button_holder {</p>
-
-<p class=MsoNormal>                  display: flex;</p>
-
-<p class=MsoNormal>                  flex-direction: row;</p>
-
-<p class=MsoNormal>                  align-items: center;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>button_next {  }</p>
-
-<p class=MsoNormal>button_previous {  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.stepper {  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>button {</p>
-
-<p class=MsoNormal>                  background-color: #658394;</p>
-
-<p class=MsoNormal>                  margin: auto;</p>
-
-<p class=MsoNormal>                  padding: 1rem;</p>
-
-<p class=MsoNormal>                  min-width: 10rem;</p>
-
-<p class=MsoNormal>                  font-size: 1.2rem;</p>
-
-<p class=MsoNormal>                  border-radius: 0.5rem;</p>
-
-<p class=MsoNormal>                  justify-content: center;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.button-start {</p>
-
-<p class=MsoNormal>/*             background-color: cream;*/</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>.gallery-image {</p>
-
-<p class=MsoNormal>                  max-width: 80%;</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.gallery-image img {</p>
-
-<p class=MsoNormal>                  max-width: 100%;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.hideThis {</p>
-
-<p class=MsoNormal>                  display: none;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>example-image {</p>
-
-<p class=MsoNormal>                  display: flex;</p>
-
-<p class=MsoNormal>                  flex-direction: column;</p>
-
-<p class=MsoNormal>                  margin: 3rem;</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.example-image img {</p>
-
-<p class=MsoNormal>                  display: flex;</p>
-
-<p class=MsoNormal>                  max-width:230px;</p>
-
-<p class=MsoNormal>                  max-height:95px;</p>
-
-<p class=MsoNormal>                  width: auto;</p>
-
-<p class=MsoNormal>                  height: auto;</p>
-
-<p class=MsoNormal>                  margin: 1rem;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>.listings2 {</p>
-
-<p class=MsoNormal>                  display: flex;</p>
-
-<p class=MsoNormal>                  flex-wrap: wrap;</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>}</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>/*start of media queries*/</p>
-
-<p class=MsoNormal>@media screen and (min-width: 555px) {</p>
-
-<p class=MsoNormal>  body {</p>
-
-<p class=MsoNormal>    background-color: #f57f45 !important; /* orange */</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>  nav ul {</p>
-
-<p class=MsoNormal>    display: flex;</p>
-
-<p class=MsoNormal>    flex-direction: row;</p>
-
-<p class=MsoNormal>    flex-wrap: wrap;</p>
-
-<p class=MsoNormal>    justify-content: center;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>  nav li {</p>
-
-<p class=MsoNormal>    width: 20%;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>} </p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>@media screen and (min-width: 800px) {</p>
-
-<p class=MsoNormal>  body {</p>
-
-<p class=MsoNormal>    background-color: #f2ce79; /* yellow */</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>  nav li {</p>
-
-<p class=MsoNormal>    width: 20%;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>&nbsp;</p>
-
-<p class=MsoNormal>  footer {</p>
-
-<p class=MsoNormal>    background: #000;</p>
-
-<p class=MsoNormal>    color: #FFF;</p>
-
-<p class=MsoNormal>    width: 100%;</p>
-
-<p class=MsoNormal>    margin: 0;</p>
-
-<p class=MsoNormal>    padding: 1rem;</p>
-
-<p class=MsoNormal>    box-sizing: border-box;</p>
-
-<p class=MsoNormal>    text-align: center;</p>
-
-<p class=MsoNormal>    font-weight: normal;</p>
-
-<p class=MsoNormal>  }</p>
-
-<p class=MsoNormal>}</p>
-
-</div>
-
-</body>
-
-</html>
+.skip-link {
+  position: absolute;
+  top: -3em;
+  background: #fff;
+}
+
+.skip-link:focus{
+  top: 0;
+}
+
+body{
+background-color: #f25771; 
+}
+
+main {
+  width: 90%;
+  max-width: 1000px;
+  background: #FFF;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  box-sizing: border-box;
+  margin: 1rem auto;
+}
+nav {
+  color: #FFF;
+  background-color: #000000;
+  padding: 5px;
+  display: block;
+  margin: 0;
+  border-bottom: 3px solid #FFF;
+}
+nav a {
+  color: #FFF;
+}
+nav li, nav li a {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  nav li {
+    width: 20%;
+  }
+
+h1{
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+h2{
+ font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+h3{
+ font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+p{
+font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+ul {
+  list-style-type: none;
+}
+
+/*Photo gallery css for gallery-test*/
+
+.gallery-example {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.button_holder {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+button_next {  }
+button_previous {  }
+
+.stepper {  }
+
+button {
+	background-color: #658394;
+	margin: auto;
+	padding: 1rem;
+	min-width: 10rem;
+	font-size: 1.2rem;
+	border-radius: 0.5rem;
+	justify-content: center;
+}
+
+.button-start {
+/*	background-color: cream;*/
+
+}
+.gallery-image {
+	max-width: 80%;
+
+}
+
+.gallery-image img {
+	max-width: 100%;
+}
+
+.hideThis {
+	display: none;
+}
+
+example-image {
+	display: flex;
+	flex-direction: column;
+	margin: 3rem;
+
+}
+
+.example-image img {
+	display: flex;
+  	max-width:230px;
+  	max-height:95px;
+ 	width: auto;
+  	height: auto;
+  	margin: 1rem;
+}
+
+.listings2 {
+	display: flex;
+	flex-wrap: wrap;
+}
+}
+
+/*start of media queries*/
+@media screen and (min-width: 555px) {
+  body {
+    background-color: #f57f45 !important; /* orange */
+  }
+  nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  nav li {
+    width: 20%;
+  }
+} 
+
+@media screen and (min-width: 800px) {
+  body {
+    background-color: #f2ce79; /* yellow */
+  }
+  nav li {
+    width: 20%;
+  }
+
+  footer {
+    background: #000;
+    color: #FFF;
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+    box-sizing: border-box;
+    text-align: center;
+    font-weight: normal;
+  }
+}
