--- a/css/final-style.css
+++ b/css/final-style.css
@@ -98,7 +98,7 @@ button_previous {  }
 .stepper {  }
 
 button {
-	background-color: #658394;
+	background-color: ##E8DAEF;
 	margin: auto;
 	padding: 1rem;
 	min-width: 10rem;
