--- a/css/old-style.css
+++ b/css/old-style.css
@@ -19,7 +19,7 @@ ul {
 /*start of media queries*/
 @media screen and (min-width: 555px) {
 body {
-  background-color: #f57f46
+  background-color: #483d8b
   }
   nav ul {
     display: flex;
@@ -31,7 +31,7 @@ body {
   }
 @media screen and (min-width: 800px) {
 body {
-  background-color: #6d9485
+  background-color: #483d8b
   }
   nav li {
     width: 25%;
